# cookiecutter-django-json-api

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cookiecutter.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: tests.yml
{{cookiecutter.project_name}}/: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.override.yaml  compose.yaml  deploy.sh  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  uwsgi.ini
{{cookiecutter.project_name}}/backend/: .coveragerc  manage.py
{{cookiecutter.project_name}}/backend/{{cookiecutter.project_name}}/: settings.py  settings_ci.py  settings_example.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/backend/{{cookiecutter.project_name}}/{{cookiecutter.django_app}}/: apps.py  filters.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: conftest.py  models.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.django_app}}/: apps.py  authentication.py  factories.py  models.py  serializers.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.django_app}}/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.django_app}}/tests/: test_authentication.py  test_user.py
